# hippo

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  bots.yaml  pyproject.toml
.claude/commands/agent-os/: close-milestone.md  discover-standards.md  finish-spec.md  help-flow.md  index-standards.md  migrate-product.md  plan-product.md  shape-spec.md
agent-os/product/: mission.md  roadmap-legacy.md  roadmap.md
agent-os/product/milestones/: index.yml
agent-os/specs/2026-04-05-phase1-semantic-memory-telegram/: plan.md  recap.md  references.md  shape.md  standards.md
agent-os/specs/2026-04-05-phase2-episodic-memory/: plan.md  recap.md  references.md  shape.md  standards.md
agent-os/specs/2026-04-05-phase2b-scheduler/: plan.md  recap.md  references.md  shape.md  standards.md
agent-os/specs/2026-04-05-phase3-buffer-dream-mailbox/: plan.md  recap.md  references.md  shape.md  standards.md
agent-os/standards/: index.yml
docs/: architecture.md
hippo/: __main__.py  agent.py  config.py  scheduler.py  setup.py  telegram_bridge.py  voice.py
hippo/dream/: __init__.py  housekeeping.py  prompts.py  runner.py
hippo/memory/: __init__.py  buffer.py  embeddings.py  episodic.py  mailbox.py  scheduled.py  semantic.py  server.py  store.py  types.py
scripts/: deploy.ps1  install-tasks.ps1  start-bots.ps1
tests/: conftest.py  test_buffer.py  test_config.py  test_dream.py  test_embeddings.py  test_episodic.py  test_housekeeping.py  test_mailbox.py  test_main.py  test_memory_roundtrip.py  test_scheduled.py  test_semantic.py
(+57 files in other folders)
